rust/tests/snapshots/output/integrations__resume.snap
---
source: tests/cli/snapshots.rs
---
$ vendo integrations resume c0000002-0000-4000-8000-000000000002
exit: 0
--- stdout ---
Done: Integration c0000002... resumed.
