rust/tests/snapshots/output/integrations__sync.snap
---
source: tests/cli/snapshots.rs
---
$ vendo integrations sync c0000002-0000-4000-8000-000000000002
exit: 0
--- stdout ---
Done: Sync triggered for integration c0000002....
Use 'vendo jobs list --integration c0000002-0000-4000-8000-000000000002' to monitor.
